--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <title>Bienvenue</title>
-<body>
+<body bgcolor=green>
 <div align=center>Bienvenue</div>
 </body>
 </html>
