--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <title>Bienvenue</title>
 <body bgcolor=green>
-<div align=center>Bienvenue</div>
+<div align=center>Bonjour</div>
 </body>
 </html>
